--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ repositories {
 
 
 dependencies {
+   checkstyle 'com.puppycrawl.tools:checkstyle:5.6'
    compile name: 'jaudiotagger-2.2.5'
    compile name: 'java-json-schema'
    compile name: 'jl1.0.1'
