--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,12 @@
+buildscript {
+  repositories {
+    mavenCentral()
+  }
+}
+
 apply plugin: "java"
 apply plugin: 'application'
 apply plugin: 'checkstyle'
-
-checkstyle {
-   configFile = new File(rootDir, "checkstyle.xml")
-}
     
 mainClassName = 'main.java.com.sdx2.SapphireAudioPlayer.SapphireMain'
 
@@ -31,6 +33,10 @@ dependencies {
 
 task wrapper(type: Wrapper) {
     gradleVersion = '2.8'
+}
+
+checkstyle {
+   configFile = new File(rootDir, "checkstyle.xml")
 }
 
 def getVersionName = { ->
