--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,12 @@ repositories {
    }
 }
 
+repositories {
+  mavenCentral()
+}
 
 dependencies {
+    compile group: 'com.google.guava', name: 'guava', version: '12.0'
    compile name: 'jaudiotagger-2.2.5'
    compile name: 'java-json-schema'
    compile name: 'jl1.0.1'
